# RISCV-Simulator

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  LISENSE  README.md  build-riscv-elfs.sh  plot_cache_stat.py  run-inclass-tests.sh  run_d47.sh
Lab1-CPUProfile/: Writeup.md  algo  algo.cpp  algo.java  gmon.out  whetavx.out  wheto0.out  wheto1.out  wheto2.out  wheto3.out  whetstone  whetstone.c  whetstone.s  whetstone_profile.txt
Lab2-RISCV_Simulator/: .gitignore  CMakeLists.txt  build-inclass-tests.sh  run-inclass-tests.sh  run.sh  run_test.sh
YuvImageProcessor/: .gitignore  CMakeLists.txt  README.md  Report.md  YuvImageProcessor.cpp  dem1.yuv  dem2.yuv  readme.txt
cache-trace/: 01-mcf-gem5-xcg.trace  01-mcf-gem5-xcg.trace.csv  01-mcf-gem5-xcg.trace.d4  02-stream-gem5-xaa.trace  02-stream-gem5-xaa.trace.csv  02-stream-gem5-xaa.trace.d4  1.trace  2.trace
doc/: Graphs.pptx  Report.md  Report2.md
riscv-elf/: ackermann.riscv  ackermann.s  helloworld.riscv  helloworld.s  matrixmulti.riscv  matrixmulti.s  quicksort.riscv  quicksort.s  test_arithmetic.riscv  test_arithmetic.s  test_branch.riscv  test_branch.s  test_syscall.riscv  test_syscall.s
src/: BranchPredictor.cpp  BranchPredictor.h  Cache.cpp  Cache.h  Debug.h  Main.cpp  MainCPU.cpp  MainCache.cpp  MainCacheOptimization.cpp  MemoryManager.cpp  MemoryManager.h  Simulator.cpp  Simulator.h  ToDirenoTrace.cpp
test/: helloworld.c  lib.c  lib.h  (+4 more)
test-inclass/: add.c  add.riscv  double-float.c  double-float.riscv  double-float.s  mul-div.c  mul-div.riscv  mul-div.s  n!.riscv  n!.s  simple-function.riscv
(+77 files in other folders)
